Kubernetes-fuer-Entwickler/Prometheus/03-MariaDB-Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: autoscale-mariadb-service
  labels:
    app: autoscale-mariadb-app
spec:
  selector:
    app: autoscale-mariadb-app
  ports:
  - name: sql
    port: 3306
