Kubernetes-fuer-Entwickler/Prometheus/91-Prometheus-Ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-route
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`prometheus.t.container-training.de`)
    kind: Rule
    services:
    - name: prometheus-operated
      port: 9090
